force-app/main/default/objects/Projection__c/Projection__c.object-meta.xml
<CustomObject>
    <description>Junction object that links projection Opportunities to Staging</description>
    <label>Projection</label>
    <nameField>
        <displayFormat>P:{000000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Projections</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>