force-app/main/default/objects/Projection__c/fields/Payment__c.field-meta.xml
<CustomField>
    <fullName>Payment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payment</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>npe01__OppPayment__c.npe01__Opportunity__c</field>
            <operation>equals</operation>
            <valueField>$Source.Projection__c</valueField>
        </filterItems>
        <filterItems>
            <field>npe01__OppPayment__c.npe01__Paid__c</field>
            <operation>notEqual</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>npe01__OppPayment__c</referenceTo>
    <relationshipLabel>Projections</relationshipLabel>
    <relationshipName>Projections</relationshipName>
    <type>Lookup</type>
</CustomField>