force-app/main/default/objects/Projection__c/fields/Total_Payments_Received__c.field-meta.xml
<CustomField>
    <fullName>Total_Payments_Received__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total Payments Received</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>